# WebScraper

./: .gitignore  README.md  main.py  pyproject.toml
scraper/: browser.py  product_scraper.py  search_scraper.py
